[metadata]
name = osif
author = laet4x
version = 1.0
author_email = laet4x@pehcon.org
url = https://github.com/fr4nc1stein/osint-framework
description = OSINT Framework Console
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    osint
    framework
license = AGPLv3
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
[options]
packages = find:
include_package_data = True
install_requires =
    setuptools>=42
    sploitkit>=0.5.5
    terminaltables
    vt-py
    python-dotenv
    sublist3r
    dnspython
    win_unicode_console
    censys
    malwarebazaar
    python-Wappalyzer
    shodan
    requests_oauthlib
    jellyfish
setup_requires = setuptools
python_requires = >=3.8
[options.package_data]
* = *

[options.packages.find]
    where = osif

[options.entry_points]
console_scripts =
    osif = osif.__main__:main